--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Go
+name: Release
 
 on:
   workflow_dispatch:
@@ -15,6 +15,4 @@ jobs:
         go-version: 1.16
 
     - name: Build
-      run: set CGO_ENABLED=1
-      run: set GOARCH=amd64
-      run: go build -v -ldflags -H=windowsgui -o bin/neoray_win_amd64.exe ./src
+      run: set CGO_ENABLED=1 & set GOARCH=amd64 & go build -v -ldflags -H=windowsgui -o bin/neoray_win_amd64.exe ./src
