--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,11 +17,61 @@ jobs:
     - name: Build amd64
       env: 
         CGO_ENABLED: 1
+        GOOS: windows
         GOARCH: amd64
-      run: go build -v -ldflags -H=windowsgui -o bin/neoray_win_amd64.exe ./src
+      run: go build -ldflags -H=windowsgui -o bin/neoray_windows_amd64.exe ./src
       
     - name: Build 386
       env:
         CGO_ENABLED: 1
+        GOOS: windows
         GOARCH: 386
-      run: go build -v -ldflags -H=windowsgui -o bin/neoray_win_386.exe ./src
+      run: go build -ldflags -H=windowsgui -o bin/neoray_windows_386.exe ./src
+
+  build-macos:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.16
+
+    - name: Build amd64
+      env: 
+        CGO_ENABLED: 1
+        GOOS: darwin
+        GOARCH: amd64
+      run: go build -o bin/neoray_darwin_amd64 ./src
+      
+    - name: Build 386
+      env:
+        CGO_ENABLED: 1
+        GOOS: darwin
+        GOARCH: 386
+      run: go build -o bin/neoray_darwin_386 ./src
+
+  build-linux:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.16
+
+    - name: Build amd64
+      env: 
+        CGO_ENABLED: 1
+        GOOS: linux
+        GOARCH: amd64
+      run: go build -o bin/neoray_linux_amd64 ./src
+      
+    - name: Build 386
+      env:
+        CGO_ENABLED: 1
+        GOOS: linux
+        GOARCH: 386
+      run: go build -o bin/neoray_linux_386 ./src
