--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,11 @@ jobs:
         GOOS: windows
         GOARCH: amd64
       run: go build -ldflags -H=windowsgui -o bin/neoray-windows-amd64.exe ./src
+    
+    - name: Set up MinGW x86
+      uses: egor-tensin/setup-mingw@v2
+      with:
+        platform: x86
       
     - name: Build 386
       env:
@@ -71,6 +76,9 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.16
+
+    - name: Set up required libs
+      run: sudo apt install libx11-dev libgtk-3-dev
 
     - name: Build amd64
       env: 
