--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,7 +78,9 @@ jobs:
         go-version: 1.16
 
     - name: Set up required libs
-      run: sudo apt install libx11-dev libgtk-3-dev
+      run: |
+        sudo apt update
+        sudo apt install libx11-dev libgtk-3-dev
 
     - name: Build amd64
       env: 
