--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,7 +79,7 @@ jobs:
 
     - name: Set up required libs
       run: |
-        sudo apt update
+        sudo apt update && sudo apt upgrade
         sudo apt install libx11-dev libgtk-3-dev
 
     - name: Build amd64
