--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -114,6 +114,9 @@ jobs:
       - name: Download binaries
         uses: actions/download-artifact@v2
         
+      - name: Print files
+        run: ls -A -l -h --color=auto
+        
       - name: Deploy latest release
         uses: "marvinpinto/action-automatic-releases@latest"
         if: success()
