--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,7 +82,7 @@ jobs:
         sudo dpkg --add-architecture i386
         sudo apt update && sudo apt upgrade
         sudo apt install libx11-dev libgtk-3-dev libgl1-mesa-dev xorg-dev gcc-multilib
-        sudo apt install libx11-dev:i386 libgtk-3-dev:i386 libgl1-mesa-dev:i386 xorg-dev:i386
+        sudo apt install libx11-dev:i386 libgtk-3-dev:i386 libgl1-mesa-dev:i386
 
     - name: Build amd64
       env: 
