--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,18 +18,23 @@ jobs:
       with:
         go-version: 1.17
 
+    - name: Install and run go-winres
+      run: |
+        go install github.com/tc-hib/go-winres@latest
+        cd src\assets && go-winres make && cd ..\..
+
     - name: Build amd64
-      env: 
+      env:
         CGO_ENABLED: 1
         GOOS: windows
         GOARCH: amd64
       run: go build -ldflags -H=windowsgui -o bin/neoray-win64.exe ./src
-    
+
     - name: Set up MinGW x86
       uses: egor-tensin/setup-mingw@v2
       with:
         platform: x86
-      
+
     - name: Build 386
       env:
         CGO_ENABLED: 1
@@ -42,7 +47,7 @@ jobs:
       if: success()
       with:
         name: windows-binaries
-        path: | 
+        path: |
           bin/neoray-win64.exe
           bin/neoray-win32.exe
 
@@ -57,20 +62,20 @@ jobs:
         go-version: 1.17
 
     - name: Build amd64
-      env: 
+      env:
         CGO_ENABLED: 1
         GOOS: darwin
         GOARCH: amd64
       run: go build -o bin/neoray-macos ./src
-      
+
     - name: Upload binaries
       uses: actions/upload-artifact@v2
       if: success()
       with:
         name: macos-binaries
-        path: | 
+        path: |
           bin/neoray-macos
-          
+
   build-linux:
     runs-on: ubuntu-latest
     steps:
@@ -87,7 +92,7 @@ jobs:
         sudo apt install libx11-dev libgtk-3-dev libgl1-mesa-dev xorg-dev
 
     - name: Build amd64
-      env: 
+      env:
         CGO_ENABLED: 1
         GOOS: linux
         GOARCH: amd64
@@ -98,9 +103,9 @@ jobs:
       if: success()
       with:
         name: linux-binaries
-        path: | 
+        path: |
           bin/neoray-linux64
-          
+
   release:
     runs-on: ubuntu-latest
     needs: [build-windows, build-macos, build-linux]
@@ -108,10 +113,10 @@ jobs:
     steps:
       - name: Download binaries
         uses: actions/download-artifact@v2
-        
+
       - name: Print files
         run: ls -A -l -h --color=auto
-        
+
       - name: Deploy latest release
         uses: "marvinpinto/action-automatic-releases@latest"
         if: success()
