--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
       run: go build -ldflags -H=windowsgui -o bin/neoray-win64.exe ./src
 
     - name: Set up MinGW x86
-      run: choco install mingw -y --x86
+      run: choco upgrade mingw -y --x86
     #  uses: egor-tensin/setup-mingw@v2
     #    with:
     #    platform: x86
