--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,10 +31,9 @@ jobs:
       run: go build -ldflags -H=windowsgui -o bin/neoray-win64.exe ./src
 
     - name: Set up MinGW x86
-      run: choco upgrade mingw -y --x86
-    #  uses: egor-tensin/setup-mingw@v2
-    #    with:
-    #    platform: x86
+      uses: egor-tensin/setup-mingw@v2
+      with:
+        platform: x86
 
     - name: Build 386
       env:
