--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,12 +22,13 @@ jobs:
     - name: Generate
       run: make generate
 
-    - name: Add mingw32 to path
-      run: echo "C:\msys64\mingw32\bin" >> $GITHUB_PATH
+    #- name: Add mingw32 to path
+      #run: echo "C:\msys64\mingw32\bin" >> $GITHUB_PATH
 
     - name: Build
       env:
-        #CC: i686-w64-mingw32-gcc
+        GITHUB_PATH: C:\msys64\mingw32\bin
+        CC: i686-w64-mingw32-gcc
         CGO_ENABLED: 1
         GOOS: windows
         GOARCH: 386
